- Update API to use flask_restful - Moving configuration to config file - Update README

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,7 @@ flask-sqlalchemy
 sqlalchemy_utils
 flask-mysql
 flask-migrate
-Flask-API
 mysqlclient
-Flask-Social
 Flask-Security
 oauth2client
 google-api-python-client
@@ -13,3 +11,4 @@ bcrypt
 flask-dance
 pyopenssl
 Markdown
+flask_restful
